# erpnext-copilot

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT_STATUS.md  README.md  SECURITY.md  license.txt  pyproject.toml  setup.cfg  setup.py
erpnext_ai_bots/agent/: prompts.py
erpnext_ai_bots/public/js/: chat_widget.js
erpnext_ai_bots/tools/sales/: revenue_summary.py
