[metadata]
name = erpnext_ai_bots
version = 1.1.0
description = AI-powered assistant for ERPNext — chat with your ERP in plain English
long_description = file: README.md
long_description_content_type = text/markdown
author = Ludovic Micinthe
author_email = dovik@micinthe.com
url = https://github.com/byt3crafter/erpnext_ai_bots
license = MIT

[options]
packages = find:
python_requires = >=3.10
